--- a/telegram-bot/.env.example
+++ b/telegram-bot/.env.example
@@ -7,6 +7,9 @@ WEB_APP_URL=http://localhost:3000
 # Webhook URL (for production)
 WEBHOOK_URL=https://yourdomain.com
 
+# MongoDB Connection
+MONGODB_URI=mongodb://localhost:27017/quiz-of-the-kings
+
 # Server Port (optional)
 PORT=3001
 
