--- a/telegram-bot/package.json
+++ b/telegram-bot/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "node-telegram-bot-api": "^0.64.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^8.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
