--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@telegram-apps/sdk-react": "^3.2.4",
     "lucide-react": "^0.544.0",
+    "mongoose": "^8.18.1",
     "next": "15.3.1",
     "next-intl": "^4.1.0",
     "normalize.css": "^8.0.1",
