--- a/telegram-bot/package.json
+++ b/telegram-bot/package.json
@@ -5,7 +5,9 @@
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js",
-    "dev": "nodemon bot.js"
+    "dev": "nodemon bot.js",
+    "socket": "node socketServer.js",
+    "socket:dev": "nodemon socketServer.js"
   },
   "keywords": [
     "telegram",
@@ -17,10 +19,12 @@
   "author": "Brain Arena Team",
   "license": "MIT",
   "dependencies": {
-    "node-telegram-bot-api": "^0.64.0",
+    "@telegram-apps/init-data-node": "^2.0.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "node-telegram-bot-api": "^0.64.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
